# brain2rl_openarm

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
brain2rl_openarm/: env.py  scene_utils.py
brain2rl_openarm/envs/: openarm_env.py
brain2rl_openarm/launch/: openarm_demo.launch.py  openarm_rl_gazebo.launch.py
brain2rl_openarm/nodes/: eeg_reppo_train_node.py  joint_order_node.py  load_and_run_node.py  obs_builder.py  policy_runner_node.py  reppo_train_node.py  reward_done.py  rl_train_joint_node.py  ros_env_node.py  run_with_agent_node.py  traj_recorder_node.py
brain2rl_openarm/scripts/: rl_train_joint.py  run_with_agent.py  spawn_random_cup.py  test_env.py  train_ppo_openarm.py
config/: openarm_controllers.yaml
launch/: openarm_rl_gazebo.launch.py
urdf/: openarm_sim.urdf.xacro
worlds/: openarm_table.world
